--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/darrenico.ico">
+  <meta name="description" content="Darren Duong's Resume">
+  <meta name="author" content="862193387">
 
-  <title>John Doe - Business Administration</title>
+  <title>Darren Duong - Financial Management</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Darren Duong</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/darren.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Darren Duong
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Hello! I'm Darren Duong and I am currently enrolled in the University of California, Riverside. Currently, I am apart of the pre-business program but I intend to have a concentration in finance. I would describe myself as a well-rounded student with great time management skills, determination, and abilities to adapt to any academic topic. In addition to my current studies at UC Riverside, I was also apart of the IB Diploma Program, a program that is widely recognized for their curriculum focused on professional and academic development. From this experience, I learned how to organize myself and manage my job, assignments, and other activities in a way where I felt comfortable while keeping my boss and teachers pleased.  <br><br>
 
-        Enter bio here<br><br>
+        I have gained a lot of experience working with the youth through multiple jobs and programs. Before coming to Riverside, I held a tutoring position for nearly 3 years and helped students grow academically in Math and English. Holding this position, I learned how to communicate with my coworkers, students, and  others in order to do my job properly. I became someone who was trusted by my boss and was known as a dependable and hardworking employee. I have also taken multiple opportunities to gain more experience by volunteering as a guidance counselor. I look forward to taking on new challenges and stepping out of my comfort zone to gain further experiences that will help me with future jobs.  <br><br>
 
-        Enter bio here
+        As stated previously, I intend to concentrate on Finance after departing the pre-business program. I found interest in this field after learning how to trade stocks, which pushed me to find more ways to become financially stable. To get myself further in this field, I intend to take on internships to learn more about finance through the University of Riverside. Furthermore, I intend on attending a grad school after I leave UCR in order to gain at least a masters degree. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.youtube.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/DarrenDuong">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.twitch.tv">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:dduon024@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Tutor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Kumon/Private</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Worked with parents, students, and other coworkers to help students academically<br> 
+              • Filed papers and organized work for students<br>
+              • Tutored students in Math and English<br>
+              • Worked as a private tutor on several occassions for middle/highschool students<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2017 - March 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Volunteer Guidance Counselor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Walden West Outdoor School</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for watching over students and guiding them through the day<br>
+              • Helped with tasks around the school facility and worked close with employed faculty<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">February 2017, September 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">President of Photography Club</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Andrew Hill Highschool</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Organized several meetings and helped with events<br>
+            • Helped introduce others into photography and was able to guide them through the basics<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2019 - March 2020</span>
           </div>
         </div>
 
@@ -149,36 +148,25 @@
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
 
+<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
+          <div class="resume-content">
+            <h3 class="mb-0">Andrew Hill Highschool</h3>
+            <div class="subheading mb-3">IB Diploma Student</div>
+            <div>Highschool graduate with high class standings</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2020 - May 2024</span>
+          </div>
+        </div>
+        
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Pre-Business Undergraduate</div>
+            <div>Intended Concentration in Finance</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2020 - May 2024</span>
           </div>
         </div>
 
@@ -191,7 +179,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/dim1.PNG" width="500px">
+            <img src="img/dim2.PNG" width="500px"><br>
+            <img src="img/dim3.PNG" width="500px">
+            <img src="img/dim4.PNG" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +190,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Darren Duong</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
